# SPar-Rust

./: .gitignore  Cargo.toml  NOTES  README.md  TODO  TRANSFORMATION_RULES  expand.sh  test.sh
benches/: mandelbrot.rs
compile-tests/: correct_syntax.rs
compile-tests/incorrect_syntax/: many_inputs.rs  many_outputs.rs  many_replicates.rs  no_code_block.rs  replicate_0.rs  wrong_stage.rs
src/: backend.rs  codegen.rs  lib.rs  spar_stream.rs
tests/: README.md  a.rs  syntax.rs  tests.rs
tests/semantics/: 1.rs  Cargo.toml  basic.rs  inc_double.rs  output.rs  sort.rs
tests/semantics/src/: main.rs
tests/syntax/: correct_syntax.rs
tests/syntax/incorrect_syntax/: many_inputs.rs  many_inputs.stderr  many_outputs.rs  many_outputs.stderr  many_replicates.rs  many_replicates.stderr  no_code_block.rs  no_code_block.stderr  replicate_0.stderr  wrong_stage.rs  wrong_stage.stderr
tests/syntax/src/: main.rs
tests/syntax/syntax-tests/incorrect_syntax/: replicate_0.rs
