[package]
name = "spar-rust"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
crossbeam-channel = "0.5"
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"

rust-spp = { git = "https://github.com/GMAP/rust-ssp", rev = "refs/pull/2/head" }

[dev-dependencies]
trybuild = "1.0"
rand = "0.8"

[workspace]
members = []
